[project]
name = "llm-sdk"
version = "0.1.0"
description = "LLM SDK for local model inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
]

[tool.uv]
link-mode = "symlink"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]
